# ASI

./: .gitignore  CLAUDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_UPDATE.md  PROGRESS_SUMMARY.md  README.md  ROADMAP_ANALYSIS_SUMMARY.md  fix_grace_identity.py  gui.py  roadmap.md  talk_to_grace.py  test_brain_gui.py  test_grace_brain.py  view_grace_memory.py
src/grace/: __init__.py  package.xml  setup.cfg  setup.py
src/grace/config/: grace_agi.yaml  scripture_principles.yaml
src/grace/grace/: sensor_hub.py
src/grace/grace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/grace/grace/conscience/: conscience_core.py  moral_knowledge.py  moral_reasoning.py
src/grace/grace/conscious/: action_execution.py  central_executive.py  conversation.py  default_mode.py  global_workspace.py  memory_coordinator.py  metacognition.py  narrative_self.py  reflection.py  salience_network.py  working_memory.py
src/grace/grace/dreaming/: consolidation.py  distillation.py  dreaming_process.py  imagination.py
src/grace/grace/qualia/: qualia_binding.py
src/grace/grace/subconscious/: aesthetic_sensitivity.py  affective_working_memory.py  attitudes.py  counterfactual_emotion.py  curiosity_gradient.py  episodic_memory.py  future_self_simulator.py  moral_disgust_memory.py  procedural_memory.py  semantic_memory.py  social_cognition.py  social_comparison.py  social_mirror.py  theory_of_mind.py
src/grace/grace/unconscious/: affective_core.py  disgust_purity.py  (+11 more)
src/grace/launch/: grace.launch.py  grace_agi.launch.py
(+12 files in other folders)
