<?xml version="1.0"?>
<package format="3">
  <name>grace</name>
  <version>1.0.0</version>
  <description>
    GRACE AGi — Generative Reasoning Agentic Cognitive Engine
    Full cognitive architecture pipeline for the GRACE wildlife/flower photography robot.
    Built on Waveshare UGV Beast / Jetson Orin Nano.
  </description>
  <maintainer email="grace@aurora.local">GRACE</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
